cabal-version:      2.4
name:               MapaHs
version:            0.1.0.0
synopsis:
    Uma pequena biblioteca para carregar e salvar Mapas em Haskell

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Cubidev
maintainer:         victorneony@academico.ufs.br

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Mapa

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
